# whisper.cpp

./: README.md
examples/stream.wasm/: CMakeLists.txt  circular-audio-buffer.js  emscripten.cpp  index-tmpl.html  raw-recorder.js  sipo-audio-buffer.js
examples/whisper.wasm/: CMakeLists.txt
